--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@400;500;600;700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .App {
   text-align: center;
 }
@@ -35,4 +39,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+.app {
+  height: 100%;
+  width: 100%;
+  font-family: 'Poppins';
+  @apply bg-gray-100 text-gray-500
+}
+a:hover {
+  @apply transition duration-200;
+  @apply text-gray-700
 }
