--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,66 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Poppins:wght@400;500;600;700&display=swap');
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Animations */
+.fromTop {
+  animation: slideTop 1s ease forwards;
+}
+.fromLeft {
+  animation: slideLeft 1s ease forwards;
+}
+.fromRight {
+  animation: slideRight 1s ease forwards;
+}
+.fromBottom {
+  animation: slideBottom 1s ease forwards;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes slideRight {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
 }
-
-.app {
-  height: 100%;
-  width: 100%;
-  font-family: 'Poppins';
-  background-color: #f7fafc;
-  color: #6b7280; 
+@keyframes slideLeft {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
-
-a:hover {
-  transition: color 0.2s;
-  color: #374151; 
+@keyframes slideTop {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slideBottom {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
