--- a/client/src/Pages/Cart.css
+++ b/client/src/Pages/Cart.css
@@ -5,7 +5,6 @@
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
@@ -44,7 +43,7 @@
   }
   
   .cart-table th {
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
   }
   
   .item-image {
