--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,26 +5,46 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x:hidden;
+  overflow-x: hidden;
   overflow-y: auto;
+}
+
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 7px; /* Width of the scrollbar */
+  z-index: 9999;
+}
+
+
+::-webkit-scrollbar-track {
+  background: rgb(252, 252, 253); /* Color of the track (the empty space behind the scrollbar) */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: navy; /* Darker blue when hovered */
+  border-radius: 10px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(15, 103, 198) ; /* Blue color for the scrollbar */
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 /* Custom keyframes for toast animation */
 @keyframes toast-from-right {
   from {
-      transform: translateX(100%);
+    transform: translateX(100%);
   }
   to {
-      transform: translateX(0%);
+    transform: translateX(0%);
   }
-
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
